RESOLVED FIXED 267854
RenderListBox::size() should be 'unsigned' instead of 'int'
https://bugs.webkit.org/show_bug.cgi?id=267854
Summary RenderListBox::size() should be 'unsigned' instead of 'int'
Ahmad Saleem
Reported 2024-01-22 07:33:26 PST
Hi Team, Just noticed that in HTMLSelectElement 'size' is 'unsigned long' while in rendering code, 'size()' is 'int'. This bug is about making 'layout' code to have 'unsigned' as well instead of 'int'. WebKit Source: https://github.com/WebKit/WebKit/blob/f2ffb0129de49a3c02f2b513bba61c889394fbab/Source/WebCore/rendering/RenderListBox.cpp#L261 Just raising so we can fix it. Thanks!
Attachments
EWS
Comment 1 2024-01-22 12:56:36 PST
Committed 273312@main (f95c858b517e): <https://commits.webkit.org/273312@main> Reviewed commits have been landed. Closing PR #23042 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-01-22 12:57:18 PST
Note You need to log in before you can comment on or make changes to this bug.