RenderListBox::size() should be 'unsigned' instead of 'int'

https://bugs.webkit.org/show_bug.cgi?id=267854

Reviewed by Simon Fraser.

This patch is to align size() function with HTMLSelectElement `size`, which is 'unsigned long'
so 'int' should be aligned to have 'unsigned' as well in rendering code.

* Source/WebCore/rendering/RenderListBox.cpp:
(RenderListBox::size):
* Source/WebCore/rendering/RenderListBox.h:

Canonical link: https://commits.webkit.org/273312@main